Terminado el index

--- a/Evaluacion final/index.html
+++ b/Evaluacion final/index.html
@@ -14,3 +14,31 @@
 			<h2>Luis Alfonso Rosales Ospina.</h2>
 			<h3>Fecha y lugar de nacimiento: 23 de Marzo de 1988, Barranquilla Colombia.</h3>
   </header>
+	<nav>
+			<ul>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="educacion.html">Educación</a></li>
+			<li><a href="experiencia.html">Experiencia</a></li>
+		</ul>
+		</nav>
+		<section>
+			<article>
+		   <h2>Información Personal.</h2>
+			 <img src="images/foto_perfil.jpg" alt="Foto perfil" title="Foto perfil" width="300px" height="300px">
+		  </article>
+		  <article>
+			 <h2>Perfil.</h2>
+			  <p>Locutor y diseñador gráfico, con conocimientos en Adobe Photoshop, Adobe Illustrator, Corel Draw, con más de 6 años en la industria de la publicidad, creando piezas tanto impresas como digitales, con criterio estético y artístico, por medio de diferentes herramientas tecnológicas logrando transmitir efectivamente el mensaje y cumplir los objetivos de comunicación propuestos.</p>
+			  <p>Soy analítico,  en mi puesto de trabajo me gusta ser organizado, tengo la capacidad de simplificar el trabajo eficientemente y siempre tengo presente el aprender cada día algo que aporte a mi desarrollo personal y profesional.</p>
+			<h2>Idiomas.</h2>
+			 <ul>
+				<li>Español.</li>
+				<li>Inglés (Estudiante).</li>
+			 </ul>
+	 </article>
+	 </section>
+	 <footer>Email:<a href="mailto:luismago1320@gmail.com?subject=feedback">luismago1320@gmail.com</a>  Twitter:<a href="https://twitter.com/lucho_rosales" target="_blank">@Lucho_rosales</a>  Instagram:<a href="https://www.instagram.com/lrosales23/">@Lrosales23</a></footer>
+
+
+		</body>
+	</html>
