Educacion sin errores

--- a/Evaluacion final/educacion.html
+++ b/Evaluacion final/educacion.html
@@ -36,7 +36,7 @@
      <tbody>
      <tr>
        <td>2012</td>
-       <td>Academia de Arte y cultura del Caribe</td>
+       <td>Academia de Arte y Cultura del Caribe</td>
        <td>B/quilla</td>
        <td>SÍ</td>
      </tr>
