--- a/Evaluacion final/experiencia.html
+++ b/Evaluacion final/experiencia.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Luis Rosales">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Experiencia</title>
   </head>
