Educacion con los metas

--- a/Evaluacion final/educacion.html
+++ b/Evaluacion final/educacion.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Luis Rosales">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Educación</title>
   </head>
@@ -36,7 +37,7 @@
      <tbody>
      <tr>
        <td>2012</td>
-       <td>Academia de Arte y Cultura del Caribe</td>
+       <td>Academia de Arte y cultura del Caribe</td>
        <td>B/quilla</td>
        <td>SÍ</td>
      </tr>
